# analytiQA

./: .gitignore  Dockerfile  README.md  celerybeat-schedule  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
analytiQA/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
analytiQA/helpers/: authentication.py  custom_generics.py  custom_schema_view.py  custom_viewset.py  db_router.py  error_handlers.py  exceptions.py  utils.py
apps/account/: admin.py  apps.py  managers.py  models.py  permissions.py  signals.py  tasks.py  tests.py  token.py  utils.py
apps/core/: admin.py  apps.py  excel.py  filters.py  forms.py  managers.py  models.py  pagination.py  permissions.py  signals.py  tasks.py  tests.py  utlity.py  widgets.py
apps/general/: admin.py  models.py  notification_service.py  signals.py  urlbuilder.py  utils.py
apps/nightly_sanity/: apps.py  models.py
apps/poc/: urls.py  utils.py  views.py
apps/report/: models.py
apps/stb/: admin.py  apps.py  mixins.py  models.py  permissions.py  results.py  stbtester.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/utlity/: decorator.py
staticfiles/: staticfiles.json
staticfiles/css/: main.0d06163a.76cef4bfab40.css  main.0d06163a.css  main.0d06163a.css.4381829e8fba.map  main.573da2f1.adeadfbb7130.css  main.573da2f1.css  main.573da2f1.css.a4ea2152ee8f.map
staticfiles/js/: 612.5515748e.chunk.5456308eb643.js  612.5515748e.chunk.js  main.399b952b.js  (+5 more)
temp_uploads/: testcase_VVbfyLu.xlsx  testcase_mDM9Aip.xlsx  testcase_nnS5Prn.xlsx
templates/: button.html  email.html
(+87 files in other folders)
